--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <div id="header">
             <!-- Begin Nav -->
             <ul id="nav">
-                <li><a href="#">ome</a></li>
+                <li><a href="#">Home</a></li>
                 <li><a href="#band">Band</a></li>
                 <li><a href="#tour">Tour</a></li>
                 <li><a href="#contact">Contact</a></li>
@@ -62,15 +62,15 @@
                 <div class="row member-list">
                     <div class="col col-third s-col-full mt-32 text-center">
                         <div class="member-name">Name</div>
-                        <img src="/assets/img/slider/member.jpg" alt="Name" class="member-picture">
+                        <img src="../img/slider/member.jpg" alt="Name" class="member-picture">
                     </div>
                     <div class="col col-third s-col-full mt-32 text-center">
                         <div class="member-name">Name</div>
-                        <img src="/assets/img/slider/member.jpg" alt="Name" class="member-picture">
+                        <img src="../img/slider/member.jpg" alt="Name" class="member-picture">
                     </div>
                     <div class="col col-third s-col-full mt-32 text-center">
                         <div class="member-name">Name</div>
-                        <img src="/assets/img/slider/member.jpg" alt="Name" class="member-picture">
+                        <img src="../img/slider/member.jpg" alt="Name" class="member-picture">
                     </div>
                 </div>
                 
