--- a/index.html
+++ b/index.html
@@ -62,15 +62,15 @@
                 <div class="row member-list">
                     <div class="col col-third s-col-full mt-32 text-center">
                         <div class="member-name">Name</div>
-                        <img src="../img/slider/member.jpg" alt="Name" class="member-picture">
+                        <img src="../assets/img/slider/member.jpg" alt="Name" class="member-picture">
                     </div>
                     <div class="col col-third s-col-full mt-32 text-center">
                         <div class="member-name">Name</div>
-                        <img src="../img/slider/member.jpg" alt="Name" class="member-picture">
+                        <img src="../assets/img/slider/member.jpg" alt="Name" class="member-picture">
                     </div>
                     <div class="col col-third s-col-full mt-32 text-center">
                         <div class="member-name">Name</div>
-                        <img src="../img/slider/member.jpg" alt="Name" class="member-picture">
+                        <img src="../assets/img/slider/member.jpg" alt="Name" class="member-picture">
                     </div>
                 </div>
                 
