--- a/index.html
+++ b/index.html
@@ -62,15 +62,15 @@
                 <div class="row member-list">
                     <div class="col col-third s-col-full mt-32 text-center">
                         <div class="member-name">Name</div>
-                        <img src="/assets/img/slider/member.JPG" alt="Name" class="member-picture">
+                        <img src="./assets/img/slider/member.jpg" alt="Name" class="member-picture">
                     </div>
                     <div class="col col-third s-col-full mt-32 text-center">
                         <div class="member-name">Name</div>
-                        <img src="/assets/img/slider/member.JPG" alt="Name" class="member-picture">
+                        <img src="./assets/img/slider/member.jpg" alt="Name" class="member-picture">
                     </div>
                     <div class="col col-third s-col-full mt-32 text-center">
                         <div class="member-name">Name</div>
-                        <img src="/assets/img/slider/member.JPG" alt="Name" class="member-picture">
+                        <img src="./assets/img/slider/member.jpg" alt="Name" class="member-picture">
                     </div>
                 </div>
                 
@@ -90,7 +90,7 @@
                     <!-- Places -->
                     <div class="row places-list">
                         <div class="col col-third s-col-full mt-16">
-                            <img src="/assets/img/tour/newyork.JPG" alt="New York" class="place-img">
+                            <img src="./assets/img/tour/newyork.jpg" alt="New York" class="place-img">
                             <div class="place-body">
                                 <h3 class="place-heading">New York</h3>
                                 <p class="place-time">Fri 27 Nov 2016</p>
@@ -100,7 +100,7 @@
                         </div>
 
                         <div class="col col-third s-col-full mt-16">
-                            <img src="/assets/img/tour/paris.JPG" alt="New York" class="place-img">
+                            <img src="./assets/img/tour/paris.jpg" alt="New York" class="place-img">
                             <div class="place-body">
                                 <h3 class="place-heading">Paris</h3>
                                 <p class="place-time">Sat 28 Nov 2016</p>
@@ -110,7 +110,7 @@
                         </div>  
 
                         <div class="col col-third s-col-full mt-16">
-                            <img src="/assets/img/tour/sanfran.JPG" alt="New York" class="place-img">
+                            <img src="./assets/img/tour/sanfran.jpg" alt="New York" class="place-img">
                             <div class="place-body">
                                 <h3 class="place-heading">New York</h3>
                                 <p class="place-time">Fri 27 Nov 2016</p>
